Upgrade springmockk to 4.0.0